--- a/Docs/Paper/LaTex/template.tex
+++ b/Docs/Paper/LaTex/template.tex
@@ -114,7 +114,7 @@ grestore
               Graduate Program in Electrical Engineering, Federal University of Amazonas, Brazil \\
 %              Tel.: +123-45-678910\\
 %              Fax: +123-45-678910\\
-              \email{\{iurybessa, hussamaibrahim\}@ufam.edu.br and\\{\{rdegelo, esj.galvao\}@gmail.com}}          %  \\
+              \email{\{alessandro.b.trindade, hussamaismail, rdegelo, esj.galvao\}@gmail.com}          %  \\
 %             \emph{Present address:} of F. Author  %  if needed
            \and
            H. Silva and L. Cordeiro \at
@@ -733,11 +733,13 @@ In terms of SMT-based verification, most work is restricted to present the model
 \label{Conclusions}
 %----------------------------------------------
 
-\textcolor{Red}{After presented the 7 techniques and the experimental results to the partitioning problem solution of HW-SW became evident that for a quantity of nodes bigger than 300, the best option is ILP. Below 300 the best option turns out to be vZ, its response time is superior and notorious. ESBMC is a viable tool for a quantity of nodes lower than 150.}  GA had an intermediate result in terms of performance, but the error presented from exact solution made it not acceptable to that kind of application. This error may be reduced by changing some parameters.The computing time to solve the optimization problem reached some hours of execution on a standard desktop computer. 
+We presented four approaches to solve the HW-SW partitioning problem and compared them to other three state-of-the-art techniques. Experimental results showed that for a number of nodes larger than $300$, the best solution for the HW-SW partitioning problem is ILP. Below that, the best option turns out to be vZ since its execution time is faster and notorious. ESBMC is a viable alternative for a number of nodes lower than $150$.  GA had an intermediate result in terms of performance, but the error presented from exact solution made it not acceptable to that kind of application. This error may be reduced by changing some parameters. 
 
-If considering off-the-shelf tools, as MATLAB to ILP and GA, the coding is simpler. However, ESBMC and Vz has BSD-Style license and MIT respectively and can be downloaded and used for free.\textcolor{Red}{ The benchmarks results shows the improvement of ESBMC when using a parallel approach, all three parallel techniques mentioned in this paper had expressive results. The biggest highlight goes to the ESBMC PB (Parallel Binary) which behaves very well for an intermediate amount of edges and nodes.}Thus, considering that nowadays the processors have more and more cores, when modeling the problem, it is possible to consider multi-core ESBMC as an alternative to solve the partitioning problem. 
+%The computing time to solve the optimization problem reached some hours of execution on a standard desktop computer. 
 
-Finally, there is an issue about 150 nodes problem, since it seems to be the limit of ESBMC. It really depends on the modeling granularity of the problem. Some researchers propose fine-grained models, in which each instruction can be mapped to either HW or SW. This may lead to thousands of nodes or even more. Others defend coarse-grained models, where decisions are made for bigger components, thus even complex systems may consist of just some dozens of nodes to partition. In principle, a fine-grained approach may allow to obtain better partitions, but at the cost of an exponential increase of the size of the search space. \textcolor{Red}{On future works we will address improvements in the ESBMC, we hope to remove the parallel layer on top of ESBMC and implement it on it's core, it would optimize the processing time.}
+If considering off-the-shelf tools, as MATLAB to ILP and GA, the coding is simpler. However, ESBMC and Vz have BSD-Style and MIT licenses, respectively and can be downloaded and used for free. Experimental results also pointed to an improvement of ESBMC, when using a parallel approach. In particular, all three parallel approaches described in this paper produced expressive results. The fastest ESBMC approaches is ESBMC-PB (Parallel Binary), which produces good results for an intermediate amount of edges and nodes. Thus, considering that nowadays processors have more and more cores, when modeling the problem, it is possible to consider multi-core model checking as an alternative to solve the HW-SW partitioning problem. 
+
+Finally, there is an issue about $150$ nodes problem, since it seems to be the limit of ESBMC. It really depends on the modeling granularity of the problem. Some researchers propose fine-grained models, in which each instruction can be mapped to either HW or SW. This may lead to thousands of nodes or even more. Others defend coarse-grained models, where decisions are made for larger components, thus even complex systems may consist of just some dozens of nodes to partition. In principle, a fine-grained approach may allow to obtain better partitions, but at the cost of an exponential increase of the search space size. In future work, we will address improvements in ESBMC to remove the parallel layer on top of ESBMC and implement it during symbolic execution so that we can optimize the overall verification time.
 
 %----------------------------------------------
 %\section{References}
