--- a/Docs/Paper/LaTex/template.tex
+++ b/Docs/Paper/LaTex/template.tex
@@ -232,11 +232,13 @@ There are two directives in C/C++ that can be used to guide a model checker to s
 \subsection{OpenMP}
 \label{OpenMP}
 %----------------------------------------------
-The OpenMP is a set of directives for parallel programming that augments C/C$++$ and Fortran languages. OpenMP supports most processor architectures and operating systems, e.g., Solaris, AIX, HP-UX, Linux, Mac OS X, and Windows. OpenMP uses a portable and very robust model that makes easy for programmers to develop parallel applications for a variety of platforms. In particular, OpenMP uses the fork-join model of parallel execution ~\cite{OpenMP1998}
+The OpenMP is a set of directives for parallel programming that augments C/C$++$ and Fortran languages. OpenMP supports most processor architectures and operating systems, e.g., Solaris, AIX, HP-UX, Linux, Mac OS X, and Windows. OpenMP uses a portable and very robust model that makes easy for programmers to develop parallel applications for a variety of platforms. 
+
+In particular, OpenMP uses the fork-join model of parallel execution ~\cite{OpenMP1998}. The main thread executes the sequential parts of the program; if a parallel region is encountered, then it forks a team of worker threads. After the parallel region finishes ({\it i.e.}, the API waits until all threads terminate), then the main procedure gets back to the single-threaded execution mode~\cite{Wu2014}.
 
 The most basic directive of OpenMP is the ``\#pragma omp parallel for'', which parallelizes the enclosing loop; a basic OpenMP example is shown below:
 
-\textcolor{blue}{Nao existem outras diretivas? Explicar um pouco mais sobre o OpenMP, em especial, tente descrever as funcoes que usamos na nossa solucao. Foi somente o ``\#pragma omp parallel for''??}
+\textcolor{blue}{Nao existem outras diretivas? Explicar um pouco mais sobre o OpenMP, em especial, tente descrever as funcoes que usamos na nossa solucao. Foi somente o ``\#pragma omp parallel for''??. Professor, usei tambem regiao critica}
 
 \begin{lstlisting}[caption=OpenMP basic sample]
 01.  int i;
@@ -245,7 +247,9 @@ The most basic directive of OpenMP is the ``\#pragma omp parallel for'', which p
 04.      a[i] = 2 * i;
 \end{lstlisting}
 
-In the above example, the for loop is executed in parallel \textcolor{blue}{Como? Cada posicao do array eh executada em um nucleo diferente?}. Each iteration of the loop is executed in a separated thread.
+In the above example, the for loop is executed in parallel \textcolor{blue}{Como? Cada posicao do array eh executada em um nucleo diferente? Não é garantido que use. Isto depende da afinidade do processo com os cores e tambem da quantidade de cores existentes.}. Each iteration of the loop is executed in a separated thread. \textcolor{red}{Each thread may use an idle processor}.
+
+There is also a way to specify critical regions, which is a block of code that is guaranteed to be execute by a single thread at a time. To create a critical region   the directive ``\#pragma omp critical'' should be used.
 
 
 %----------------------------------------------
@@ -397,9 +401,7 @@ The main factor for ESBMC to use only a single-core relies on its back-end (i.e.
 
 To optimize the CPU resources utilization without modifying the underlying SMT Solver, the Open Multi-Processing (OpenMP) library~\cite{Dagum1998} is used in this present work as a front-end for ESBMC.
 
-\textcolor{blue}{Mover este texto para a secao de background sobre OpenMP?... OpenMP is a standard Application Programming Interface (API) for shared memory programming, which has been very successful for structural parallelism in applications. The API provides a directive-based programming approach to write parallel versions of C/C++ programs ~\cite{Qawasmeh2014}.} 
-
-As described in Section~\ref{OpenMP}, in OpenMP the implementation is based on the fork-join model. The main thread executes the sequential parts of the program; if a parallel region is encountered, then it forks a team of worker threads. After the parallel region finishes ({\it i.e.}, the API waits until all threads terminate), then the main procedure gets back to the single-threaded execution mode~\cite{Wu2014}. Fig.~\ref{ESBMC-Multi-core} shows our first approach called ``Multi-core ESBMC''.
+Fig.~\ref{ESBMC-Multi-core} shows our first approach called ``Multi-core ESBMC''.
 %
 \begin{figure}[ht]
 	\centering
@@ -411,8 +413,8 @@ As described in Section~\ref{OpenMP}, in OpenMP the implementation is based on t
 Multi-core ESBMC obtains the problem specification represented by a C program. The HW-SW partitioning is violated, when the correct optimum value (\textit{TipH}) parameter is reached; Multi-core ESBMC starts a parallel region with different instances of ESBMC, based on the number of available processing cores. All these ESBMC instances run independently of each other, as shown in Fig.~\ref{ESBMC-Multi-core}. Note that there is no shared-memory (or message-passing) mechanism among the threads. In particular, different threads are managed by the OpenMP API, which is responsible for the thread lifecycle: start, running, and dead states, using different values as condition. After executing $N$ instances, if there is no code violation, then multi-core ESBMC starts new instances again. During the parallel region execution, if a violation is found in any running thread, then it presents the counterexample with the violation condition and the verification time. If all threads of the batch processing are terminated, then multi-core ESBMC finishes its execution.
 
 %----------------------------------------------
-\subsection{Multi-core ESBMC with OpenMP using Binary Search}
-\label{Multi-core-ESBMC-with-OpenMP-using-Binary-Search}
+\subsection{Multi-core ESBMC with OpenMP using Workers}
+\label{Multi-core-ESBMC-with-OpenMP-using-workers}
 %----------------------------------------------
 
 The previous parallelization is implemented by continuously forking ESBMC instances until the first violation is found. However, since OpenMP only returns from a parallelized loop, when every forked thread finishes, some processing cores could remain idle for some period of time.
@@ -425,6 +427,11 @@ The previous parallelization is implemented by continuously forking ESBMC instan
 \end{figure}
 
 Consequently, the second approach aims to remove the idle time from the parallel loops, by creating workers inside threads so that the next step is immediately executed if there is a processing core available. This approach could potentially lead to great performance improvements, but as ESBMC checks for each step almost at the same rate, the processor does not remain idle for a longer period and thus there is almost no optimization.
+
+%----------------------------------------------
+\subsection{Multi-core ESBMC with OpenMP using Binary Search}
+\label{Multi-core-ESBMC-with-OpenMP-using-Binary-Search}
+%----------------------------------------------
 
 The most optimized approach applies a parallelized binary search to reduce the amount of steps to be executed in order to find the optimal solution. A controller is designed to return the step to be executed so that the number of verification runs are substantially reduced as much as possible. The parallelized binary search accomplishes this by splitting the domain of possible values into intervals and then by returning the middle of the largest interval so that two new intervals are created.
 %
@@ -447,6 +454,7 @@ As an example, given a problem of domain from $1$ to $20$ (see Fig.~\ref{Binary-
 Note that there might gaps between steps, which are produced by the customized binary search. For instance, in the example shown in~\ref{Binary-Step-Calculation}, if step $10$ returns \textit{false}, then one can conclude that all steps after $10$ is \textit{false} as well. However, if the same step $10$ returns \textit{true}, we can assume that all steps before $10$ is \textit{true} as well. As a result, an auxiliary method to remove unnecessary steps is implemented in the controller by removing or shrinking existing intervals. This approach leads to a high impact in the verification time. However, if a step is running and is not needed anymore, the worker kills the forked process and starts a new one.
 
 \textcolor{blue}{Precisas descrever no topo do algoritmo as entradas e saidas}
+\textcolor{red}{The algorithm below is called from each worker in order to get the next step to execute if it exists, if not, zero or a negative number will be returned.}
 
 \begin{lstlisting}[caption=Steps Calculation using Intervals,label=Steps-Calculation-using-Intervals]
 01. GetNextStep(){
@@ -540,12 +548,12 @@ A desktop with $24$GB of RAM and i$7$ ($8$-cores) from Intel with CPU clock of $
 
 ESBMC implement four approaches: ESBMC, ESBMC Multicore (MC), ESBMC Parallel Sequential (PS), and ESBMC Parallel binary (PB).
 
-\textcolor{blue}{Nao existe uma secao sobre o ESBMC PS. Ela esta misturada na secao do PB. Sugiro criar uma subsecao para o ESBMC PS.}
+\textcolor{blue}{Nao existe uma secao sobre o ESBMC PS. Ela esta misturada na secao do PB. Sugiro criar uma subsecao para o ESBMC PS. Feito}
 
 \begin{itemize}
 \item{\textbf{ESBMC:} This strategy uses only one core to solve the partitioning problem, as described in Section~\ref{Verification-Algorithm-using-ESBMC}.
 \item{\textbf{ESBMC-MC:} This uses a sequential strategy $\left\{1,2,\ldots, H_{max}\right\}$; there is no parallel controller in this approach, as described in Section~\ref{Multi-core-ESBMC-with-OpenMP}.}
-\item{\textbf{ESBMC-PS:} This approach is similar to ESBMC MC; however, it uses a more optimized way to launch the ESBMC instances, as described Section~\ref{Multi-core-ESBMC-with-OpenMP-using-Binary-Search}.}
+\item{\textbf{ESBMC-PS:} This approach is similar to ESBMC MC; however, it uses a more optimized way to launch the ESBMC instances, as described Section~\ref{Multi-core-ESBMC-with-OpenMP-using-workers}.}
 \item{\textbf{ESBMC-PB:} This strategy uses a parallel binary search, as described in Section~\ref{Multi-core-ESBMC-with-OpenMP-using-Binary-Search}.}}
 \end{itemize}
 
@@ -720,9 +728,9 @@ Finally, there are approaches that mixes heuristics with exact solution tools. T
 
 In terms of SMT-based verification, most work is restricted to present the model, its modification to programming languages (e.g., C/C++ and Java), and the application to multi-thread algorithms or to embedded systems to check for program correctness. In ~\cite{Ramalho2013} it presents a bounded model checker for C++ programs, which is an evolution of dealing with C programs and ~\cite{Cordeiro2012} uses the ESBMC model checker for embedded ANSI-C software. In~\cite{Trindade2015} and~\cite{Trindade2014} it was proven that it is possible to use ESBMC to solve HW-SW partitioning, but in a single core way. There are related studies focused on decreasing the verification time of model checkers by applying Swarm Verification ~\cite{Holzmann2011}, and modifications of internal search engines to support parallelism ~\cite{Holzmann2012}, but there is still the need for initiatives related to parallel SMT solvers ~\cite{Wintersteiger2009}. Recently, the SMT solver Z3 has been extended to pose and solve optimization problems modulo theories ~\cite{Bjorner2015}.
 
-\textcolor{Red}{A ferramenta vZ ~\cite{Bjorner2014} e ~\cite{Bjorner2015} oferece ganhos substanciais em problemas de otimizacao. O trabalho descrito em ~\cite{Pavlinovic2015} relata erros em compiladores e suas confusas mensagens, a abordagem classica é mostrar ao programador qual o local de erro e um dica sobre o mesmo, entretanto, outras fontes de erros não são consideradas, a abordagem mais indicada seria considerar todas as fontes de erros possiveis. Para modelar o problema são geradas as restricoes usando EasyOCaml, e vZ é responsavel por computar a menor caminho de erros. o Algoritmo descrito em ~\cite{Pavlinovic2015} mostrou-se eficiente frente as outras abordagens.}
+\textcolor{Red}{The vZ tool ~\cite{Bjorner2014} and ~\cite{Bjorner2015} offer substantial improvements on optimization problems. The work described in ~\cite{Pavlinovic2015} reports compiler errors and its confuse messages, the classic approach is to show to the programmer the error location and a hint about it, however, another error sources are not considered, the most appropriate approach would be to consider all possible error sources. To model the problem the restrictions are generated using EasyOCaml, and vZ is responsible to compute the best error path. The algorithm described in ~\cite{Pavlinovic2015} shows efficient against the other approaches.}
 
-\textcolor{Red}{O problema abordado neste trabalho utiliza objetivo unico, minimizacao da funcao objetivo, em ~\cite{Patrick2015} é comparada as ferramentas OptiMathSAT com vZ para problemas de verificacao de SW. OptiMathSAT usando multiplos objetivos funciona muito melhor do que vZ com mulitplos objetivos, contudo, para problemas com objetivos unicos vZ se comparta melhor do que OptiMathSAT.}
+\textcolor{Red}{The problem adressed in this work uses a single objective, minimizing of the objective function, in ~\cite{Patrick2015} is compared the tools  OptiMathSAT and vZ for software optimization problems. OptiMathSAT using multiple objectives works way better than vZ, however, for problems with single objectives vZ behaves better than OptiMathSAT.}
 
 %----------------------------------------------
 \section{Conclusions}
